trunk/Archive2/84/fadaabb70d38fa/output
main.cpp:20:5: error: template argument uses local type 'Enum' [-Werror,-Wlocal-type-template-args]
    isEqual(v1, v2);
    ^~~~~~~
main.cpp:22:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
2 errors generated.
